--- a/index.html
+++ b/index.html
@@ -8,11 +8,35 @@
 </head>
 
 <body>
-	<div id="webgi-canvas-container">
-		<canvas id="webgi-canvas"></canvas>
-	</div>
-
-	<script src="src/index.ts" type="module"></script>
+	<div id="canvasContainer">
+		<canvas id="mcanvas"></canvas>
+	  </div>
+	  <style> body {
+		overflow: hidden;
+		width: 100%;
+		height: 100%;
+		margin: 0;
+		padding: 0;
+		background-color: white;
+		font-family: "Inter", sans-serif !important;
+	  }
+	  
+	  #mcanvas {
+		width: 100%;
+		height: 100%;
+		z-index: -1;
+	  }
+	  #canvasContainer {
+		width: 100%;
+		height: 100%;
+		position: fixed;
+		top: 0;
+		z-index: 5;
+	  }
+	  </style>
+	  <script>
+	  document.getElementById("demo").innerHTML = "Hello JavaScript!";
+	  </script>
 </body>
 
 </html>
