--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,12 @@
-<div id="canvasContainer">
+<!DOCTYPE html>
+<html>
+    <head>
+        huh
+    </head>
+    <body>
+        <div id="canvasContainer">
   <canvas id="mcanvas"></canvas>
 </div>
+    </body>
+</html>
+
